--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.45.1
-matplotlib==3.7.1
-numpy==1.24.3
-pillow==11.2.1
-ffmpeg-python==0.2.0
+streamlit
+matplotlib
+numpy
+pillow
+ffmpeg-python
